# mm2

./: .gitignore  AI量化选股平台_PRD与实施计划.md  Codex多线程执行方案.md  pyproject.toml  线程状态看板.md
backend/api/: __init__.py  app.py  mock_service.py  models.py  responses.py  watchlist_store.py
backend/api/routes/: __init__.py  auth.py  macro.py  rankings.py  reports.py  stocks.py  strategies.py  tasks.py  watchlist.py
backend/auth/: __init__.py  dependencies.py  mock_auth.py
backend/data_pipeline/: __init__.py  filters.py  normalizers.py  quality.py  runner.py  schemas.py  storage.py
backend/data_sources/: __init__.py  akshare_provider.py  base.py
backend/factors/: __init__.py  base.py
backend/scoring/: __init__.py  base.py
backend/strategies/: __init__.py  base.py  config.py  explanations.py  registry.py  signals.py
backend/strategies/examples/momentum_quality_daily/: __init__.py  signal.py  strategy.yaml
backend/tasks/: __init__.py  mock_tasks.py
data/: README.md
data/processed/: README.md
data/processed/trade_calendar/market=cn/: part.jsonl
data/processed/valuation_snapshots/market=cn/: part.jsonl
data/raw/: README.md
docs/: API接口规范.md  v0.2初步版本说明.md  后端平台线程_Boyle_完成汇报.md  数据字典.md  数据源评估.md  数据线程_Hypatia_完成汇报.md  架构总览.md  策略插件规范.md  页面原型说明.md
frontend/: index.html  package.json  server.mjs  styles.css
frontend/src/: apiClient.js  app.js  mockData.js
scripts/: run_live_data_sample.py  run_strategy_sample.py
tests/: test_data_pipeline.py  test_generated_rankings.py  test_strategy_framework.py  test_watchlist_store.py
(+16 files in other folders)
