[project]
name = "mm2-ai-stock-selection"
version = "0.2.0"
description = "Local AI-assisted stock selection research platform for A-shares and Hong Kong stocks."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pandas>=2.2",
  "duckdb>=1.0",
  "pyarrow>=16.0",
  "akshare>=1.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
ml = [
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
